bundled_metadata/force-app/main/default/objects/AssessmentTaskIndDefinition/fields/IsRequired__c.field-meta.xml
<CustomField>
    <fullName>IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required?</label>
    <type>Checkbox</type>
</CustomField>