bundled_metadata/force-app/main/default/objects/AssessmentTaskIndDefinition/fields/Survey_Section__c.field-meta.xml
<CustomField>
    <fullName>Survey_Section__c</fullName>
    <label>Survey Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>